fixed overflow and added non-saved darkmode

--- a/website/frontend/static/css/index.css
+++ b/website/frontend/static/css/index.css
@@ -1,32 +1,76 @@
-html{
-    width: 100vw;
-    height: 100vh;
-    padding: 0;
-    margin: 0;
+
+:root {
+    --color-dark: #121212;
+    --color-light: #ffffff;
+    --text-full: 100%;
+    --text-diminished: 87%;
+
+
+    --color-text: var(--color-dark);
+    --color-background: var(--color-light);
+    --text-opacity: var(--text-full);
 }
 
-body {
-    --nav-width: 200px;
+html, body {
+    --nav-width: 300px;
     font-family: 'Quicksand', sans-serif;
     font-size: 1.5rem;
     padding: 0;
     margin: 0;
+    height: 100%;
+    width: 100%;
+    background-color: var(--color-background);
+    color: var(--color-text);
+}
+
+p, h1, a {
+    opacity: var(--text-opacity);
+}
+
+.dark-mode {
+    --color-text: var(--color-light);
+    --color-background: var(--color-dark);
+    --text-opacity: var(--text-diminished);
 }
 
 img{
     max-width: 100%;
     height: auto;
+    background-color: none;
+    padding: 10%;
+}
+
+.settings-container{
+    display: grid;
+    grid-template-columns:50% 50%;
+    grid-row: auto auto;
+}
+
+.settings-label{
+    text-align: end !important;
+}
+
+.toggle{
+    text-align: start !important;
+}
+
+.fa-toggle-on{
+    color: black;
 }
 
 .nav-mobile {
     position: fixed;
-    top: 79px;
+    top: 70px;
     left: 0;
     height: 100%;
     width: 50%;
     background: #222222;
     z-index: 1;
+}
 
+.nav-mobile a{
+    padding-top: 50px;
+    font-size: 1rem;
 }
 
 .nav-mobile-top {
@@ -34,13 +78,15 @@ img{
     top: 0;
     left: 0;
     width: 100%;
-    height: 80px;
+    height: 70px;
     background: #222222;
     z-index: 2;
 }
 
 .nav-mobile-top *{
     display: inline-block;
+    padding-left: 5%;
+    max-width: 50%;
 }
 
 .nav-mobile-top i{
@@ -49,7 +95,8 @@ img{
 
 .title{
     width:80%;
-    font-size: 2rem;
+    vertical-align: middle;
+    font-size: 1rem;
     text-align: center;
     color: white;
     font-family: 'Garamond';
@@ -63,13 +110,22 @@ img{
     display: none;
 }
 
-.nav__link {
+.nav__link, .contact_link {
     display: block;
     padding: 12px 18px;
     text-decoration: none;
     color: #eeeeee;
     font-weight: 500;
     padding: 5%;
+}
+
+.contact_link {
+    width: 80%;
+    font-size: 0.7rem !important;
+    text-align: center;
+    position: absolute;
+    bottom: 100px;
+    left: 0;
 }
 
 .nav__link:hover {
@@ -80,16 +136,16 @@ img{
     line-height: 1.5;
     font-weight: 500;
     height: 100vh;
-    padding: 1%;
 }
 
 #app *{
-    width: 100%;
+    width: 90%;
     text-align: center;
+    margin: auto;
 }
 
 #app h1{
-    font-size: 3rem;
+    font-size: 2rem;
     margin-top: 80px;
 }
 
@@ -102,8 +158,17 @@ i {
     padding: 1%;
 }
 
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
 
 @media only screen and (min-width: 759px) {
+    html, body {
+        width: 100vw - var(--nav-width)
+    }
     .nav-mobile-top {
         display:none;
     }
@@ -125,10 +190,16 @@ i {
 
     .nav__link {
         display: block;
-        padding: 12px 18px;
+        padding: 10% 20%;
         text-decoration: none;
         color: #eeeeee;
         font-weight: 500;
+    }
+
+    .contact_link {
+        bottom: 10px;
+        width: 90%;
+        padding: 5%;
     }
 
     .nav__link:hover {
@@ -140,13 +211,6 @@ i {
         line-height: 1.5;
         font-weight: 500;
         margin: 0 0 0 var(--nav-width);
-    }
-
-    img{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 50%;
     }
 
     i {
